Creaccion de vista servicios Singular

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -63,7 +63,9 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="index.htm" style="height: 75px;display: inline-block;width: 115px;margin-top: 5px;"><img style="display: block;height: 100%;margin: 0 auto;" src="./images/thl.png" alt=""></a>
+                        <a href="index.htm" style="height: 75px;display: inline-block;width: 115px;margin-top: 5px;">
+                            <img style="display: block;height: 100%;margin: 0 auto;" src="./images/thl.png" alt="">
+                        </a>
                     </div>
                     <!--End: Logo-->
 
@@ -155,34 +157,7 @@
                             <div class="icon"><i class="fa fa-plug"></i></div>
                             <h3 class="text-center">THL</h3>
                             <p class="texto">
-                                <a href="" style="color: #fff">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-12" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fa fa-plug"></i></div>
-                            <h3 class="text-center">THL</h3>
-                            <p class="texto">
-                                <a href="" style="color: #fff">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-12" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fa fa-plug"></i></div>
-                            <h3 class="text-center">THL</h3>
-                            <p class="texto">
-                                <a href="" style="color: #fff">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-12" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fa fa-plug"></i></div>
-                            <h3 class="text-center">THL</h3>
-                            <p class="texto">
-                                <a href="" style="color: #fff">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</a>
+                                <a href="./pages/service-1.html" style="color: #fff">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</a>
                             </p>
                         </div>
                     </div>
