Estructura de servicio

--- a/THL/pages/youtube.html
+++ b/THL/pages/youtube.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Thl</title>
+    <title>Thl - Youtube</title>
 
     <link href="../css/plugins.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
@@ -109,31 +109,9 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-
-
-
                         <h1 data-animate="fadeInUp" data-animate-delay="600">Somos una compañía<br>Administradora de redes sociales a celebridades
                             <font color="#8080FF">.</font>
                         </h1>
-                        <!-- end: Captions -->
-                        <!-- <div class="row" style="padding-top:14%;">
-                            <div class="col-lg-3" data-animate="fadeInUp" data-animate-delay="1200">
-                                <h4>Directed Acyclic Graph</h4>
-                                <p>UBIX is a hybrid DAG fully built in NodeJS (<a href="SilentNotaryEcosystem/Cil-core.html">github</a>) worked on for over <u>4 years</u> by a team of 17 people.</p>
-                            </div>
-                            <div class="col-lg-3" data-animate="fadeInUp" data-animate-delay="1900">
-                                <h4>Hybrid</h4>
-                                <p>UBIX is hybrid, meaning it has different kinds (private/public) blockchains in a single network.</p>
-                            </div>
-                            <div class="col-lg-3" data-animate="fadeInUp" data-animate-delay="2300">
-                                <h4>Ecosystem</h4>
-                                <p>We have a full eco system that includes dapps, a launchpad, an exchange and a super application (our heart).</p>
-                            </div>
-                            <div class="col-lg-3" data-animate="fadeInUp" data-animate-delay="2900">
-                                <h4>Daily 0,10% Airdrops!</h4>
-                                <p>Hold over 1M (native) UBX and receive 0,10% (compounding) UBX per day! For instructions <a href="#faq" style="text-decoration: underline">click here</a>.</p>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -143,8 +121,8 @@
         <section>
             <div class="container">
                 <div class="heading-text heading-section">
-                    <h2 id="ecosystem">THL</h2>
-                    <span class="lead">THL is our hybrid DAG; Fully built in NodeJS (first ever!). Built in 4+ years by a team of 17. One of it's many features are smart contracts and sharding.</span>
+                    <h2 id="ecosystem">Youtube</h2>
+                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Youtube.</span>
                 </div>
 
                 <div class="row">
@@ -152,11 +130,9 @@
                         <img src="../images/fondos/diseño-web.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum autem tempora quaerat distinctio quo rerum suscipit, amet totam qui exercitationem tenetur. Laudantium similique et facilis, dicta vitae architecto nisi inventore?</p>
-                        <p>Earum laboriosam nesciunt illo voluptate beatae provident voluptatem nostrum inventore! Repellat dolorum laudantium exercitationem odio rerum possimus sint nam amet natus fugiat voluptas ipsam, recusandae necessitatibus mollitia,
-                            neque incidunt sequi?</p>
-                        <p>Earum laboriosam nesciunt illo voluptate beatae provident voluptatem nostrum inventore! Repellat dolorum laudantium exercitationem odio rerum possimus sint nam amet natus fugiat voluptas ipsam, recusandae necessitatibus mollitia,
-                            neque incidunt sequi?</p>
+                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Youtube, which reaches millions of users, transcending borders.</p>
+                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
+                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
                     </div>
                 </div>
             </div>
