Implementación de testos

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -103,7 +103,7 @@
         <!-- Slider -->
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="./video/video_header03.mp4">
+            <div class="slide kenburns" data-bg-video="./video/200422 _Digital Media Icons_01_4k_035.mp4">
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -151,8 +151,9 @@
 
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki">Prestamos nuestros servicios</h2>
-                        <p>These are some of the influential communities to which we offer our services at THL.</p>
+                        <h2 id="wiki">Who we work with</h2>
+                        <p>We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
+                            brining the best opportunities and representation for clients and</p>
                     </div>
                 </div>
 
@@ -437,14 +438,13 @@
 
 
         <!-- Learn more -->
-        <section class="p-t-120 p-b-120">
+        <section class="p-t-120">
             <div class="container">
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h4 id="learnmore">Learn More About THL</h4>
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Facebook , which reaches millions of users, transcending borders. <br> We know
-                            that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks <br> and in the updated content that your
-                            followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
+                        <h4 id="learnmore">About me</h4>
+                        <p>We are London’s fastest growing agency representing talent and brands across the world.</p>
+                        <p>Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
                     </div>
                 </div>
             </div>
