--- a/THL/pages/google.html
+++ b/THL/pages/google.html
@@ -101,7 +101,7 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="../video/video_header03.mp4">
+            <div class="slide kenburns" data-bg-video="../video/200422 _Digital Media Icons_01_4k_035.mp4">
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="slide-captions text-light">
