--- a/THL/pages/twitter.html
+++ b/THL/pages/twitter.html
@@ -8,14 +8,14 @@
 
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'>
 
-    <meta name="description" content="UBIX - A Digital Universe with Endless Possibilities.">
-    <meta name="keywords" content="UBIX, UBX, Directed Acyclic Graph, DAG">
-    <meta name="author" content="UBIX">
-    <meta name="application-name" content="UBIX">
+    <meta name="description" content="THL - A Digital Universe with Endless Possibilities.">
+    <meta name="keywords" content="THL, Directed Acyclic Graph, DAG">
+    <meta name="author" content="THL">
+    <meta name="application-name" content="THL">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Thl - Twitter</title>
+    <title>The Hidden London - Twitter</title>
 
     <link href="../css/plugins.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
@@ -35,20 +35,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-
                     </div>
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
                             <ul>
-                                <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li class="social-linkedin"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                                <li class="social-instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li class="social-google"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="social-pinterest"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li class="social-dribbble"><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                <li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li class="social-facebook"><a href="#"><i style="color:#314145" class="fab fa-facebook-f"></i></a></li>
+                                <li class="social-twitter"><a href="#"><i style="color:#314145" class="fab fa-twitter"></i></a></li>
+                                <li class="social-instagram"><a href="#"><i style="color:#314145" class="fab fa-instagram"></i></a></li>
+                                <li class="social-google"><a href="#"><i style="color:#314145" class="fab fa-google-plus-g"></i></a></li>
+                                <li class="social-youtube"><a href="#"><i style="color:#314145" class="fab fa-youtube"></i></a></li>
+                                <li class="social-soundcloud"><a href="#"><i style="color:#314145" class="fab fa-soundcloud"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -64,7 +60,7 @@
                     <!--Logo-->
                     <div id="logo">
                         <a href="../index.htm" class="content-logo">
-                            <img class="img-ligth img-general" src="../images/01.png" alt="">
+                            <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
                     <!--End: Logo-->
@@ -79,18 +75,19 @@
                         <div class="container">
                             <nav>
                                 <ul>
-                                    <li><a href="../index.html">Home</a></li>
-                                    <li><a href="#" class="dropdown">Services</a>
+                                    <li><a style="color:#314145" href="../index.htm">Home</a></li>
+                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="./instagram.html">Instagram</a></li>
-                                            <li><a href="./facebook.html">Facebook</a></li>
-                                            <li><a href="./twitter.html">Twitter</a></li>
-                                            <li><a href="./youtube.html">Youtube</a></li>
-                                            <li><a href="./google.html">Google +</a></li>
+                                            <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
+                                            <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
+                                            <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
+                                            <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
+                                            <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
+                                            <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Contact</a></li>
-                                    <li><a href="#">About Us</a></li>
+                                    <li><a style="color:#314145" href="../index.htm#constact">Contact</a></li>
+                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -101,7 +98,7 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="../video/200422 _Digital Media Icons_01_4k_035.mp4">
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/twitter-banner.jpg">
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -109,16 +106,20 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Somos una compañía<br>Administradora de redes sociales a celebridades
-                            <font color="#8080FF">.</font>
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                            <font color="#0f2123">.</font>
                         </h1>
                     </div>
                 </div>
+                <a class="arrowScrollDown" href="#section">
+                    <h4 style="text-align: center;color:white">Championing Creativity &amp; Originality Since 1998</h4>
+                    <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
+                </a>
             </div>
             <!-- end: Slide 1 -->
         </div>
         <!-- Container -->
-        <section>
+        <section id="section">
             <div class="container">
                 <div class="heading-text heading-section">
                     <h2 id="ecosystem">Twitter</h2>
@@ -127,7 +128,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/diseño-web.jpg" alt="" class="img-fluid">
+                        <img src="../images/fondos/twitter-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
                         <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Twitter, which reaches millions of users, transcending borders.</p>
