--- a/THL/index.htm
+++ b/THL/index.htm
@@ -9,13 +9,13 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'>
 
     <meta name="description" content="THL - A Digital Universe with Endless Possibilities.">
-    <meta name="keywords" content="THL, UBX, Directed Acyclic Graph, DAG">
+    <meta name="keywords" content="THL, Directed Acyclic Graph, DAG">
     <meta name="author" content="THL">
     <meta name="application-name" content="THL">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Thl</title>
+    <title>The Hidden London</title>
 
     <link href="css/plugins.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -42,13 +42,10 @@
                             <ul>
                                 <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li class="social-linkedin"><a href="#"><i class="fab fa-linkedin"></i></a></li>
                                 <li class="social-instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
                                 <li class="social-google"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="social-pinterest"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li class="social-dribbble"><a href="#"><i class="fab fa-dribbble"></i></a></li>
                                 <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                <li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li class="social-soundcloud"><a href="#"><i class="fab fa-soundcloud"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -64,7 +61,7 @@
                     <!--Logo-->
                     <div id="logo">
                         <a href="index.htm" class="content-logo">
-                            <img class="img-ligth img-general" src="./images/01.png" alt="">
+                            <!-- <img class="img-ligth img-general" src="./images/01.png" alt=""> -->
                         </a>
                     </div>
                     <!--End: Logo-->
@@ -79,7 +76,7 @@
                         <div class="container">
                             <nav>
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.htm">Home</a></li>
                                     <li><a href="#" class="dropdown">Services</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="#Services">Instagram</a></li>
@@ -115,10 +112,10 @@
 
 
                         <h1 data-animate="fadeInUp" data-animate-delay="600">We are THL, A Digital<br> Universe with Endless Possibilities
-                            <font color="#8080FF">.</font>
+                            <font color="#0f2123">.</font>
                         </h1>
                         <div data-animate="fadeInUp" data-animate-delay="900">
-                            <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#ecosystem">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
+                            <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#Services">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
                         </div>
                         <!-- end: Captions -->
                         <!-- <div class="row" style="padding-top:14%;">
@@ -259,61 +256,48 @@
                     <span class="lead">Below a quick overview of THL Services.</span>
                 </div>
 
-                <div class="row">
-                    <div class="col-lg-3 col-12 mb-5" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fab fa-instagram"></i></div>
+            </div>
+            <div class="contentGrid">
+                <div class="box-content box-instagram" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/instagram.html" style="color: #fff">
                             <h3 class="text-center">INSTAGRAM</h3>
-                            <p class="texto">
-                                <a href="./pages/instagram.html" style="color: #fff">
-                                    There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Instagram.
-                                </a>
-                            </p>
-                        </div>
+                        </a>
                     </div>
-                    <div class="col-lg-3 col-12 mb-5" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fab fa-facebook-f"></i></div>
+                </div>
+                <div class="box-content box-facebook" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/facebook.html" style="color: #fff">
                             <h3 class="text-center">FACEBOOK</h3>
-                            <p class="texto">
-                                <a href="./pages/facebook.html" style="color: #fff">
-                                    There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Facebook.
-                                </a>
-                            </p>
-                        </div>
+                        </a>
                     </div>
-                    <div class="col-lg-3 col-12 mb-5" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fab fa-twitter"></i></div>
+                </div>
+                <div class="box-content box-twitter" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/twitter.html" style="color: #fff">
                             <h3 class="text-center">TWITTER</h3>
-                            <p class="texto">
-                                <a href="./pages/twitter.html" style="color: #fff">
-                                    There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Twitter.
-                                </a>
-                            </p>
-                        </div>
+                        </a>
                     </div>
-                    <div class="col-lg-3 col-12 mb-5" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fab fa-youtube"></i></div>
+                </div>
+                <div class="box-content box-youtube" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/youtube.html" style="color: #fff">
                             <h3 class="text-center">YOUTEBE</h3>
-                            <p class="texto">
-                                <a href="./pages/youtube.html" style="color: #fff">
-                                    There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Youtebe.
-                                </a>
-                            </p>
-                        </div>
+                        </a>
                     </div>
-                    <div class="col-lg-3 col-12 mb-5" data-animate="flipInY" data-animate-delay="0">
-                        <div class="card-thl" style="background-image: url(./images/fondos/influencer-marketing.jpg);">
-                            <div class="icon"><i class="fab fa-google-plus-g"></i></div>
-                            <h3 class="text-center">GOOGLE +</h3>
-                            <p class="texto">
-                                <a href="./pages/google.html" style="color: #fff">
-                                    There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Google +.
-                                </a>
-                            </p>
-                        </div>
+                </div>
+                <div class="box-content box-soudcould" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/soundcloud.html" style="color: #fff">
+                            <h3 class="text-center">SOUDCLOUD</h3>
+                        </a>
+                    </div>
+                </div>
+                <div class="box-content box-tiktok" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./pages/tiktok.html" style="color: #fff">
+                            <h3 class="text-center">Tiktok </h3>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -322,13 +306,13 @@
         <!-- end: Our Ecosystem -->
 
         <!-- Our numbers -->
-        <section class="p-t-200 p-b-200" data-bg-parallax="./images/4.jpg">
+        <section class="p-t-200 p-b-200" data-bg-parallax="./images/team.jpg">
             <div class="container xs-text-center sm-text-center text-light">
                 <div class="bg-overlay"></div>
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="heading-text heading-section">
-                            <h2 id="numbers">Nuestro clientes</h2>
+                            <h2 id="numbers">Our main customers</h2>
                             <p class="lead">
                                 Every day THL transfers millions in dollars on it's network. We currently have <b>15308</b> non-zero wallets.
                                 <b>6</b> blockchains. <b>591</b> TXs in the past day. Besides that our masternodes receives <b>47533780</b> in fees the past month, there was <b>6504157000</b> in UBX staked and our masternode holders received <b>18.10%</b>                                in staking rewards.
@@ -341,31 +325,31 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="1000" data-refresh-interval="5" data-to="87090993.23" data-from="87090993.23" data-seperator="true"></span> </div>
+                                    <div class="counter text-lg"> <span data-speed="1000" data-refresh-interval="5" data-to="15000" data-from="0" data-seperator="true"></span> </div>
                                     <div class="seperator seperator-small"></div>
-                                    <p>Actores</p>
+                                    <p>Actors</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="1500" data-refresh-interval="2" data-to="34581869147" data-from="34581869097" data-seperator="true"></span> </div>
+                                    <div class="counter text-lg"> <span data-speed="1500" data-refresh-interval="2" data-to="1800" data-from="0" data-seperator="true"></span> </div>
                                     <div class="seperator seperator-small"></div>
-                                    <p>Musicos </p>
+                                    <p>Musicians </p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="300" data-refresh-interval="12" data-to="30949144" data-from="30949744" data-seperator="true"></span> </div>
+                                    <div class="counter text-lg"> <span data-speed="300" data-refresh-interval="12" data-to="2000" data-from="0" data-seperator="true"></span> </div>
                                     <div class="seperator seperator-small"></div>
-                                    <p>VALUE TRANSFERRED (USD/24h)</p>
+                                    <p>Journalists</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
 
                                 <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="455" data-refresh-interval="50" data-to="7073704.97" data-from="7073604.97" data-seperator="true"></span> </div>
+                                    <div class="counter text-lg"> <span data-speed="455" data-refresh-interval="50" data-to="1250" data-from="0" data-seperator="true"></span> </div>
                                     <div class="seperator seperator-small"></div>
-                                    <p>VOLUME (USD/24h)</p>
+                                    <p>Writers</p>
                                 </div>
                             </div>
                         </div>
