--- a/THL/pages/soundcloud.html
+++ b/THL/pages/soundcloud.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Hidden London - Google +</title>
+    <title>The Hidden London - Instagram</title>
 
     <link href="../css/plugins.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
@@ -35,6 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
+
                     </div>
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
@@ -82,11 +83,12 @@
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
-                                            <li><a style="color:#314145" href="./google.html">Google +</a></li>
+                                            <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
+                                            <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
                                         </ul>
                                     </li>
-                                    <li><a style="color:#314145" href="#">Contact</a></li>
-                                    <li><a style="color:#314145" href="#">About Us</a></li>
+                                    <li><a style="color:#314145" href="../index.htm#constact">Contact</a></li>
+                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -97,8 +99,8 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="../video/200422 _Digital Media Icons_01_4k_035.mp4">
-                <div class="bg-overlay"></div>
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/soudcould-banner.jpg">
+                <!-- <div class="bg-overlay"></div> -->
                 <div class="container">
                     <div class="slide-captions text-light">
                         <!-- Captions -->
@@ -110,23 +112,27 @@
                         </h1>
                     </div>
                 </div>
+                <a class="arrowScrollDown" href="#section">
+                    <h4 style="text-align: center;color:white">Championing Creativity &amp; Originality Since 1998</h4>
+                    <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
+                </a>
             </div>
             <!-- end: Slide 1 -->
         </div>
         <!-- Container -->
-        <section>
+        <section id="section">
             <div class="container">
                 <div class="heading-text heading-section">
-                    <h2 id="ecosystem">Google +</h2>
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Google +.</span>
+                    <h2 id="ecosystem">Soundcloud</h2>
+                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Soundcloud.</span>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/diseño-web.jpg" alt="" class="img-fluid">
+                        <img src="../images/fondos/soudcould-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Google +, which reaches millions of users, transcending borders.</p>
+                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Soundcloud, which reaches millions of users, transcending borders.</p>
                         <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
                         <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
                     </div>
