--- a/THL/pages/service-1.html
+++ b/THL/pages/service-1.html
@@ -165,76 +165,13 @@
         <!-- Fin Container -->
         <!-- Footer -->
         <footer id="footer">
-            <div class="footer-content">
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="widget">
-                                <div class="widget-title">BECOME A THL TODAY!</div>
-                                <p class="mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id praesentium dolorem pariatur, mollitia nulla porro hic alias adipisci tempore distinctio reiciendis similique repellat quod. Officia ea pariatur similique beatae
-                                    expedita. <a href="index.htm" target="_new">THL.Exchange</a>.</p>
-                                <a href="../index.htm" class="btn btn-inverted" target="_blank">BUY UBX NOW</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-7">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Our Network</div>
-                                        <ul class="list">
-                                            <li><a href="../index.htm#numbers">Our Numbers</a></li>
-                                            <li><a href="../index.htm#learnmore">Learn More</a></li>
-                                            <li><a href="../index.htm#wiki">THL.Wiki</a>&nbsp;<span class="badge badge-success">TIP</span></li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Spotlighted Projects</div>
-                                        <ul class="list">
-                                            <li><a href="">UBIX.Exchange&nbsp;<span class="badge badge-danger">2nd Round</span>&nbsp;<span class="badge badge-info">UBXE</span></a></li>
-                                            <li><a href="">MakeMeMoney&nbsp;<span class="badge badge-success">Staking</span>&nbsp;<span class="badge badge-info">UBXM</span></a></li>
-                                            <li><a href="">Crypto Depository Receipts</a>&nbsp;<span class="badge badge-info">UBXCDR</span></li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Information</div>
-                                        <ul class="list">
-                                            <li><a href="">THL Explorer</a></li>
-                                            <li><a href="">Tokenomics</a></li>
-                                            <li><a href="">GitHub</a>&nbsp;<span class="badge badge-secondary">Must see!</span></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Apps</div>
-                                        <ul class="list">
-                                            <li><a href="" target="new">Android</a></li>
-                                            <li><a href="" target="new">iOS</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
             <div class="copyright-content">
                 <div class="container">
-                    <div class="copyright-text text-center">&copy; 2021 <a href="../index.htm" rel="noopener">THL</a> - A Digital Universe. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a> -
-                        <a href="../index.htm" target="_blank" rel="noopener">GitHub</a></div>
+                    <div class="copyright-text text-center">&copy; 2021 The Hidden Londons. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a></div>
                 </div>
             </div>
         </footer>
         <!-- end: Footer -->
-
     </div>
 
 
