--- a/THL/index.htm
+++ b/THL/index.htm
@@ -246,7 +246,7 @@
             <div class="box-content box-youtube" data-animate="flipInY" data-animate-delay="0">
                 <div class="card-thl">
                     <a href="./pages/youtube.html" style="color: #fff">
-                        <h3 class="text-center">YOUTEBE</h3>
+                        <h3 class="text-center">YOUTUBE</h3>
                     </a>
                 </div>
             </div>
