Ajuste de colores

--- a/THL/pages/tiktok.html
+++ b/THL/pages/tiktok.html
@@ -86,7 +86,7 @@
                                             <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
                                         </ul>
                                     </li>
-                                    <li><a style="color:#314145" href="../index.htm#constact">Contact</a></li>
+                                    <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
                                     <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
@@ -112,14 +112,14 @@
                     </div>
                 </div>
                 <a class="arrowScrollDown" href="#section">
-                    <h4 style="text-align: center;color:white">Championing Creativity &amp; Originality Since 1998</h4>
+
                     <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
                 </a>
             </div>
             <!-- end: Slide 1 -->
         </div>
         <!-- Container -->
-        <section id="section">
+        <section id="section" class="background-grey">
             <div class="container">
                 <div class="heading-text heading-section">
                     <h2 id="ecosystem">Tik Tok</h2>
