--- a/THL/index.htm
+++ b/THL/index.htm
@@ -86,7 +86,7 @@
                                             <li><a href="#Services">Google +</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#constact">Contact</a></li>
+                                    <li><a href="./pages/contacto.html">Contact</a></li>
                                     <li><a href="#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
@@ -100,7 +100,7 @@
         <!-- Slider -->
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="./video/200422 _Digital Media Icons_01_4k_035.mp4">
+            <div class="slide kenburns" data-bg-video="./video/videoHom.mp4">
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -213,7 +213,7 @@
     <!-- end: Team -->
 
     <!-- Our Ecosystem -->
-    <section id="Services" class="p-0">
+    <section id="Services" class="pb-0 background-grey">
         <div class="container">
             <div class="heading-text heading-section">
                 <h2 id="ecosystem">SERVICES</h2>
@@ -341,71 +341,6 @@
 
     </section>
     <!-- end: Learn more -->
-
-
-    <!-- Contact -->
-    <section id="constact" class="p-t-150">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="heading-text heading-section">
-                                <h2 id="contact">Get in Touch with Us</h2>
-                                <p class="lead">Have questions or concerns? Than please reach out to us by email or through the contact form on the right.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 m-b-30">
-                            <address>
-                                    <strong>Headquarters Belize:</strong><br>
-                                    Sigany LTD #1 Mapp Street<br>
-                                    Belize City, Belize<br><br>
-                                </address>
-                            <strong>Email:</strong> belize@THL.network
-                        </div>
-                        <div class="col-lg-12 m-b-30">
-                            <h4>We are social</h4>
-
-                            <div class="social-icons social-icons-light social-icons-colored-hover">
-                                <ul>
-                                    <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li class="social-instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li class="social-google"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    <li class="social-soundcloud"><a href="#"><i class="fab fa-soundcloud"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 offset-1">
-                    <form class="widget-contact-form" novalidate="" action="include/contact-form.php" role="form" method="post">
-                        <div class="row">
-                            <div class="form-group col-md-6">
-                                <label for="name">Name</label>
-                                <input type="text" aria-required="true" required="" name="widget-contact-form-name" class="form-control required name" placeholder="Enter your Name">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="email">Email</label>
-                                <input type="email" aria-required="true" required="" name="widget-contact-form-email" class="form-control required email" placeholder="Enter your Email">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Enter your Message"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-light" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
-                        </div>
-                    </form>
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end: Contact -->
-
 
     <!-- Footer -->
     <footer id="footer">
