Ajuste de colores

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -191,7 +191,7 @@
                             <img src="images/redes/escritor.jpg" alt="Escritores">
                         </div>
                         <p>Description for celebrities to whom the social media management service is offered<br><br></p>
-                        <span>Escritores</span>
+                        <span>Writers</span>
                     </div>
 
                     <!-- end: Team item-->
@@ -202,7 +202,7 @@
                             <img src="images/redes/Stores.jpg" alt="Tiendas">
                         </div>
                         <p>Description for celebrities to whom the social media management service is offered<br><br></p>
-                        <span>Tiendas</span>
+                        <span>Shops</span>
                     </div>
                 </div>
                 <!-- end: Team item-->
