--- a/THL/pages/contacto.html
+++ b/THL/pages/contacto.html
@@ -119,7 +119,7 @@
             <!-- end: Slide 1 -->
         </div>
         <!-- Contact -->
-        <section id="constact" class="p-t-150 background-grey">
+        <section id="constact" class="p-t-150 background-grey" data-bg-video="../video/video1.mp4">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
