Ajuste de colores

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -79,15 +79,15 @@
                                     <li><a href="index.htm">Home</a></li>
                                     <li><a href="#" class="dropdown">Services</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#Services">Instagram</a></li>
-                                            <li><a href="#Services">Facebook</a></li>
-                                            <li><a href="#Services">Twitter</a></li>
-                                            <li><a href="#Services">Toutube</a></li>
-                                            <li><a href="#Services">Google +</a></li>
+                                            <li><a href="#Services" class="ancla">Instagram</a></li>
+                                            <li><a href="#Services" class="ancla">Facebook</a></li>
+                                            <li><a href="#Services" class="ancla">Twitter</a></li>
+                                            <li><a href="#Services" class="ancla">Toutube</a></li>
+                                            <li><a href="#Services" class="ancla">Google +</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="./pages/contacto.html">Contact</a></li>
-                                    <li><a href="#learnmore">About Us</a></li>
+                                    <li><a href="#learnmore" class="ancla">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
