--- a/THL/pages/tiktok.html
+++ b/THL/pages/tiktok.html
@@ -111,7 +111,7 @@
                         </h1>
                     </div>
                 </div>
-                <a class="arrowScrollDown" href="#section">
+                <a class="arrowScrollDown ancla" href="#section">
 
                     <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
                 </a>
