--- a/THL/pages/google.html
+++ b/THL/pages/google.html
@@ -39,12 +39,12 @@
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
                             <ul>
-                                <li class="social-facebook"><a href="#"><i style="color:#314145" class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-twitter"><a href="#"><i style="color:#314145" class="fab fa-twitter"></i></a></li>
-                                <li class="social-instagram"><a href="#"><i style="color:#314145" class="fab fa-instagram"></i></a></li>
-                                <li class="social-google"><a href="#"><i style="color:#314145" class="fab fa-google-plus-g"></i></a></li>
+                                <li class="social-facebook"><a href="https://www.facebook.com/The-Hidden-London-106528494879638/?ref=page_internal" target="_blank"><i style="color:#314145" class="fab fa-facebook-f"></i></a></li>
+                                <li class="social-twitter"><a href="https://twitter.com/TheHiddenLondon" target="_blank"><i style="color:#314145" class="fab fa-twitter"></i></a></li>
+                                <li class="social-instagram"><a href="https://www.instagram.com/thehiddenlondon/" target="_blank"><i style="color:#314145" class="fab fa-instagram"></i></a></li>
+                                <!-- <li class="social-google"><a href="#"><i style="color:#314145" class="fab fa-google-plus-g"></i></a></li>
                                 <li class="social-youtube"><a href="#"><i style="color:#314145" class="fab fa-youtube"></i></a></li>
-                                <li class="social-soundcloud"><a href="#"><i style="color:#314145" class="fab fa-soundcloud"></i></a></li>
+                                <li class="social-soundcloud"><a href="#"><i style="color:#314145" class="fab fa-soundcloud"></i></a></li> -->
                             </ul>
                         </div>
                     </div>
