--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -77,15 +77,15 @@
                             <nav>
                                 <ul>
                                     <li><a style="color:#314145" href="../index.htm">Home</a></li>
-                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
+                                    <li><a style="color:#314145" href="./services.html" class="dropdown">Services</a>
+                                        <!-- <ul class="dropdown-menu">
                                             <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
                                             <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
                                             <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
                                     <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
@@ -107,7 +107,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">SERVICES<br>Below a quick overview of THL Services
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -120,26 +120,48 @@
             <!-- end: Slide 1 -->
         </div>
         <!-- Container -->
-        <section id="section" class="background-grey">
-            <div class="container">
-                <div class="heading-text heading-section">
-                    <h2 id="ecosystem">Instagram</h2>
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Instagram.</span>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/intagram-destacada.jpg" alt="" class="img-fluid">
+        <!-- Our Ecosystem -->
+        <section id="Services" class="p-0 background-grey">
+            <div class="contentGrid">
+                <div class="box-content box-instagram" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a href="./campaing-strategy.html" style="color: #fff">
+                            <h3 class="text-center">Campaing Strategy</h3>
+                        </a>
                     </div>
-                    <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Instagram, which reaches millions of users, transcending borders.</p>
-                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
-                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
+                </div>
+                <div class="box-content box-facebook" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a style="color: #fff">
+                            <h3 class="text-center">Production & Content Creation</h3>
+                        </a>
+                    </div>
+                </div>
+                <div class="box-content box-twitter" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a style="color: #fff">
+                            <h3 class="text-center">Digital Data & Marketing</h3>
+                        </a>
+                    </div>
+                </div>
+                <div class="box-content box-50 box-youtube" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a style="color: #fff">
+                            <h3 class="text-center">Brand & Talent Relations</h3>
+                        </a>
+                    </div>
+                </div>
+                <div class="box-content box-50 box-soudcould" data-animate="flipInY" data-animate-delay="0">
+                    <div class="card-thl">
+                        <a style="color: #fff">
+                            <h3 class="text-center">Legal & Compliance</h3>
+                        </a>
                     </div>
                 </div>
             </div>
 
         </section>
+        <!-- end: Our Ecosystem -->
         <!-- Fin Container -->
         <!-- Footer -->
         <footer id="footer">
