--- a/THL/index.htm
+++ b/THL/index.htm
@@ -77,15 +77,7 @@
                             <nav>
                                 <ul>
                                     <li><a href="index.htm">Home</a></li>
-                                    <li><a href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#Services" class="ancla">Instagram</a></li>
-                                            <li><a href="#Services" class="ancla">Facebook</a></li>
-                                            <li><a href="#Services" class="ancla">Twitter</a></li>
-                                            <li><a href="#Services" class="ancla">Toutube</a></li>
-                                            <li><a href="#Services" class="ancla">Google +</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="./pages/services.html">Services</a></li>
                                     <li><a href="./pages/contacto.html">Contact</a></li>
                                     <li><a href="#learnmore" class="ancla">About Us</a></li>
                                 </ul>
@@ -107,13 +99,11 @@
                         <!-- Captions -->
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
-
-
-
-
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are THL, A Digital<br> Universe with Endless Possibilities
+                        <span class="texto-banner">A forward-thinking marketing agency using data and innovative strategies to provide influential and effective campaigns.</span>
+                        <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden London
                             <font color="#0f2123">.</font>
                         </h1>
+                        <h5 class="fuente-banner">A new generation of culture</h5>
                         <div data-animate="fadeInUp" data-animate-delay="900">
                             <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#Services">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
                         </div>
@@ -123,6 +113,61 @@
             </div>
             <!-- end: Slide 1 -->
         </div>
+
+        <!-- Our numbers -->
+        <section class="p-t-200 p-b-100" data-bg-parallax="./images/team.jpg">
+            <div class="container xs-text-center sm-text-center text-light">
+                <div class="bg-overlay"></div>
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="heading-text heading-section">
+                            <h2 id="numbers">Our main customers</h2>
+                            <p class="lead">
+                                Every day THL transfers millions in dollars on it's network. We currently have <b>15308</b> non-zero wallets.
+                                <b>6</b> blockchains. <b>591</b> TXs in the past day. Besides that our masternodes receives <b>47533780</b> in fees the past month, there was <b>6504157000</b> in UBX staked and our masternode holders received <b>18.10%</b>                                in staking rewards.
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-7">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="text-center">
+                                    <div class="counter text-lg"> <span data-speed="1000" data-refresh-interval="5" data-to="15000" data-from="0" data-seperator="true"></span> </div>
+                                    <div class="seperator seperator-small"></div>
+                                    <p>Actors</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="text-center">
+                                    <div class="counter text-lg"> <span data-speed="1500" data-refresh-interval="2" data-to="1800" data-from="0" data-seperator="true"></span> </div>
+                                    <div class="seperator seperator-small"></div>
+                                    <p>Musicians </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="text-center">
+                                    <div class="counter text-lg"> <span data-speed="300" data-refresh-interval="12" data-to="2000" data-from="0" data-seperator="true"></span> </div>
+                                    <div class="seperator seperator-small"></div>
+                                    <p>Journalists</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+
+                                <div class="text-center">
+                                    <div class="counter text-lg"> <span data-speed="455" data-refresh-interval="50" data-to="1250" data-from="0" data-seperator="true"></span> </div>
+                                    <div class="seperator seperator-small"></div>
+                                    <p>Writers</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Our numbers -->
+
         <!-- More -->
         <section class="background-grey p-t-120 p-b-120">
 
@@ -208,149 +253,35 @@
                 <!-- end: Team item-->
             </div>
             <!-- end: Team -->
-    </div>
-    </section>
-    <!-- end: Team -->
-
-    <!-- Our Ecosystem -->
-    <section id="Services" class="pb-0 background-grey">
-        <div class="container">
-            <div class="heading-text heading-section">
-                <h2 id="ecosystem">SERVICES</h2>
-                <span class="lead">Below a quick overview of THL Services.</span>
-            </div>
-
-        </div>
-        <div class="contentGrid">
-            <div class="box-content box-instagram" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/instagram.html" style="color: #fff">
-                        <h3 class="text-center">INSTAGRAM</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="box-content box-facebook" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/facebook.html" style="color: #fff">
-                        <h3 class="text-center">FACEBOOK</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="box-content box-twitter" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/twitter.html" style="color: #fff">
-                        <h3 class="text-center">TWITTER</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="box-content box-youtube" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/youtube.html" style="color: #fff">
-                        <h3 class="text-center">YOUTUBE</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="box-content box-soudcould" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/soundcloud.html" style="color: #fff">
-                        <h3 class="text-center">SOUDCLOUD</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="box-content box-tiktok" data-animate="flipInY" data-animate-delay="0">
-                <div class="card-thl">
-                    <a href="./pages/tiktok.html" style="color: #fff">
-                        <h3 class="text-center">Tiktok </h3>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-    </section>
-    <!-- end: Our Ecosystem -->
-
-    <!-- Our numbers -->
-    <section class="p-t-200 p-b-200" data-bg-parallax="./images/team.jpg">
-        <div class="container xs-text-center sm-text-center text-light">
-            <div class="bg-overlay"></div>
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="heading-text heading-section">
-                        <h2 id="numbers">Our main customers</h2>
-                        <p class="lead">
-                            Every day THL transfers millions in dollars on it's network. We currently have <b>15308</b> non-zero wallets.
-                            <b>6</b> blockchains. <b>591</b> TXs in the past day. Besides that our masternodes receives <b>47533780</b> in fees the past month, there was <b>6504157000</b> in UBX staked and our masternode holders received <b>18.10%</b>                            in staking rewards.
-                        </p>
-                    </div>
-                </div>
+        </section>
+        <!-- end: Team -->
 
 
-                <div class="col-lg-7">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="text-center">
-                                <div class="counter text-lg"> <span data-speed="1000" data-refresh-interval="5" data-to="15000" data-from="0" data-seperator="true"></span> </div>
-                                <div class="seperator seperator-small"></div>
-                                <p>Actors</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="text-center">
-                                <div class="counter text-lg"> <span data-speed="1500" data-refresh-interval="2" data-to="1800" data-from="0" data-seperator="true"></span> </div>
-                                <div class="seperator seperator-small"></div>
-                                <p>Musicians </p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="text-center">
-                                <div class="counter text-lg"> <span data-speed="300" data-refresh-interval="12" data-to="2000" data-from="0" data-seperator="true"></span> </div>
-                                <div class="seperator seperator-small"></div>
-                                <p>Journalists</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-
-                            <div class="text-center">
-                                <div class="counter text-lg"> <span data-speed="455" data-refresh-interval="50" data-to="1250" data-from="0" data-seperator="true"></span> </div>
-                                <div class="seperator seperator-small"></div>
-                                <p>Writers</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end: Our numbers -->
-
-
-
-
-    <!-- Learn more -->
-    <section class="p-t-120" data-bg-video="./video/aboutMe.mp4">
-        <div class="container">
-            <div class="col-lg-8 m-b-100 center">
-                <div class="heading-text heading-section text-center">
-                    <h2 style="color: #fff;" id="learnmore">About me</h2>
-                    <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">We are London’s fastest growing agency representing talent and brands across the world.</p>
-                    <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
-                </div>
-            </div>
-        </div>
-
-
-    </section>
-    <!-- end: Learn more -->
-
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="copyright-content">
+        <!-- Learn more -->
+        <section class="p-t-120" data-bg-video="./video/aboutMe.mp4">
             <div class="container">
-                <div class="copyright-text text-center">&copy; 2021 The Hidden Londons. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a></div>
+                <div class="col-lg-8 m-b-100 center">
+                    <div class="heading-text heading-section text-center">
+                        <h2 style="color: #fff;" id="learnmore">About me</h2>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">We are London’s fastest growing agency representing talent and brands across the world.</p>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- end: Footer -->
+
+
+        </section>
+        <!-- end: Learn more -->
+
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="copyright-content">
+                <div class="container">
+                    <div class="copyright-text text-center">&copy; 2021 The Hidden Londons. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a></div>
+                </div>
+            </div>
+        </footer>
+        <!-- end: Footer -->
 
     </div>
 
